# person_tracking_ros

./: .gitignore  CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
configs/: deep_sort.yaml  yolov3.yaml
launch/: person_tracker.launch  person_tracker_srv.launch
person_tracking_ros/: deep_sort_node.py
person_tracking_ros/deep_sort/: __init__.py  deep_sort.py
person_tracking_ros/deep_sort/deep/: aligned_feature_extractor.py  feature_extractor.py  reid_feature_extractor.py
person_tracking_ros/deep_sort/sort/: iou_matching.py  nn_matching.py  tracker.py
person_tracking_ros/utils/configs/: deep_sort.yaml
scripts/: launch_tracker.sh
src/deep_sort/: __init__.py
src/deep_sort/deep/: face_feature_extractor.py  inception_resnet_v1.py  osnet_ain.py
src/deep_sort/sort/: linear_assignment.py  track.py  tracker.py
src/detector/: __init__.py
src/detector/YOLOv3/: cfg.py  darknet.py  detector.py  region_layer.py  yolo_layer.py  yolo_utils.py
srv/: choose_target.srv  clear_target.srv  update_tracker.srv
